# website

./: .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierignore  README.md  main.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  vercel.json
blog/20260203_00_chart-understanding-in-docling/: post.md
blog/20260203_00_chart_understanding_in_docling/: post.md
blog/20260311_00_docling_at_gtc/: post.md
blog/20260315_00_the_latex_story/: post.md
blog/20260505_10_taxonomy-invariant-object-recognition-evaluation-TORE/: post.md
blog/20260506_00_docling-at-red-hat-summit-2026/: post.md
blog/20260612_00_chartnet_dataset/: post.md
blog/20260615_00_docling_for_ibm_watsonx/: post.md
blog/template/: post.md
blog/test/: post.md
blog/test2/: post.md
papers/: README.md  index.json
papers/20160101_stochastic_matrix_function_estimators_scalable_big_data_kernels_with_high_perfor/: paper.bib  paper.md
papers/20180501_corpus_conversion_service_a_machine_learning_platform_to_ingest_documents_at_scale/: paper.bib  paper.md
papers/20190101_ai_assisted_scalable_knowledge_ingestion_for_automated_discoveries/: paper.bib  paper.md
plans/: feature_01_navigation_restructure.md  feature_02_faq_page.md  feature_03_enhanced_papers.md  feature_04_release_timeline.md  feature_05_blog_enhancements.md  feature_06_docling_ts_viewer.md  feature_07_live_demo.md  feature_08_ecosystem_overview.md  feature_09_seo.md  ideas.md
public/: index.html  index.js  main.js  style.css
src/: index.html  style.css
src/app/: layout.tsx  (+1 more)
website/: main.py
(+264 files in other folders)
